use java 17 stream method toList rather than collect